--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -717,6 +717,105 @@ video {
     src: url("../font/DecoTech.ttf") format('truetype');
 }
 
+
+.closed-menu {
+    transform: translateX(300px);
+    transition: transform 500ms linear;
+}
+
+.opened-menu {
+    transform: translateX(0px);
+    transition: transform 500ms linear;
+}
+
+
+/*director form*/
+.Tag {
+    border-radius: 10px;
+    background-color: #dbdbdb;
+    color: #000;
+    padding: 0 10px;
+    white-space: nowrap;
+    margin: 4px auto;
+    min-width: -moz-fit-content;
+    min-width: fit-content;
+    display: flex;
+    grid-template-columns: 90% 10%;
+    cursor: pointer;
+    justify-content: space-between;
+}
+
+    .Tag > div {
+        margin: auto;
+        display: block;
+    }
+
+.MiniDeleteButton {
+    width: 15px;
+    height: 15px;
+    margin: auto 0;
+    display: block;
+    cursor: pointer;
+}
+
+.SocialMediaLinkInput {
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+}
+
+.SocialInputLabel {
+    font-weight: bold;
+    font-size: 20px;
+    font-family: inherit;
+    margin: auto;
+}
+
+.SocialInput {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px #ffffff solid;
+    padding: 0px 5px;
+}
+
+.AddLinkButton {
+    border-radius: 15px;
+    border: 1px #ffffff solid;
+    color: #ffffff;
+    background-color: #555150;
+    padding: 0px 10px;
+    font-family: inherit;
+    font-size: 15px;
+    margin: auto;
+    cursor: pointer;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+    white-space: nowrap;
+}
+
+.AddLinkButton:hover {
+    background-color: #7E7977;
+}
+
+.AddLinkButton:active {
+    transform: translateX(5px) translateY(5px);
+}
+
+.ConfirmedText {
+    font-weight: bold;
+    font-size: 20px;
+    font-family: inherit;
+    margin: auto;
+}
+
+.ErrorMessage {
+    color: red;
+    font-size: 15px;
+    font-family: inherit;
+    text-align: center;
+    margin: 5px 0px;
+}
+
 .file\:rounded-lg::file-selector-button {
   border-radius: 0.5rem;
 }
@@ -855,98 +954,4 @@ video {
 
 .\[\&\>div\]\:w-full>div {
   width: 100%;
-}
-
-.closed-menu {
-    transform: translateX(300px);
-    transition: transform 500ms linear;
-}
-
-.opened-menu {
-    transform: translateX(0px);
-    transition: transform 500ms linear;
-}
-
-
-/*director form*/
-.Tag {
-    border-radius: 10px;
-    background-color: #dbdbdb;
-    color: #000;
-    padding: 0 10px;
-    white-space: nowrap;
-    margin: 4px auto;
-    min-width: fit-content;
-    display: flex;
-    grid-template-columns: 90% 10%;
-    cursor: pointer;
-    justify-content: space-between;
-}
-
-    .Tag > div {
-        margin: auto;
-        display: block;
-    }
-
-.MiniDeleteButton {
-    width: 15px;
-    height: 15px;
-    margin: auto 0;
-    display: block;
-    cursor: pointer; 
-}
-
-.SocialMediaLinkInput {
-    display: grid;
-    grid-template-columns: 10% 80% 10%; 
-}
-
-.SocialInputLabel {
-    font-weight: bold;
-    font-size: 20px;
-    font-family: inherit;
-    margin: auto;
-}
-
-.SocialInput {
-    width: 100%;
-    border-radius: 10px;
-    border: 1px #ffffff solid;
-    padding: 0px 5px; 
-}
-
-.AddLinkButton {
-    border-radius: 15px;
-    border: 1px #ffffff solid;
-    color: #ffffff;
-    background-color: #555150;
-    padding: 0px 10px;
-    font-family: inherit;
-    font-size: 15px;
-    margin: auto;
-    cursor: pointer;
-    user-select: none;
-    white-space: nowrap;
-}
-
-    .AddLinkButton:hover {
-        background-color: #7E7977;
-    }
-.AddLinkButton:active {
-    transform: translateX(5px) translateY(5px);
-}
-
-.ConfirmedText {
-    font-weight: bold;
-    font-size: 20px;
-    font-family: inherit;
-    margin: auto;
-}
-
-.ErrorMessage {
-    color: red; 
-    font-size: 15px; 
-    font-family: inherit; 
-    text-align: center; 
-    margin: 5px 0px; 
 }
