--- a/views/user/userForm.ejs
+++ b/views/user/userForm.ejs
@@ -5,6 +5,8 @@
   <title>Henry's Speakeasy</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel ="stylesheet" href='../../stylesheets/style.css'> 
+  <link rel ="stylesheet" href='../../stylesheets/tailwind.css'> 
+  <script type="text/javascript" src="../../script/join.js"></script>
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
 </head>
 <body class = "bg-[#555150] h-auto font-['DecoTech'] relative 
