--- a/views/user/SocialMediaSelect.ejs
+++ b/views/user/SocialMediaSelect.ejs
@@ -5,10 +5,18 @@ class = "mt-[50px] text-black"
 <script>
     //Array that stores added social media links 
     var AddedSocialArray = [];
-	<% if( typeof actor != 'undefined' && stringAddedSocial != "") { %>
-        var temp = '<%= stringAddedSocial %>'
-        AddedSocialArray = (ParseText(temp)).split('|');
+
+	<% if( typeof userDetail.SocialMediaLinks != 'undefined' && userDetail.SocialMediaLinks.length > 0) { %>
+        <% userDetail.SocialMediaLinks.forEach(val => { %> 
+            var tempObj = {
+                platform: '<%= val.platform %>', 
+                link: '<%= val.link%>', 
+                }
+            AddedSocialArray.push(tempObj)
+        <%})%>
     <%}%>
+
+    console.log("AddedSocialArray: ",  AddedSocialArray)
 </script>
     <input 
         id = "SocialHiddenInput"
@@ -54,6 +62,51 @@ class = "mt-[50px] text-black"
 	    var AddSocialButton = document.getElementById('AddSocialButton');
 	    var AddedSocialMediaField = document.getElementById('AddedSocialMediaField');
 	    var SocialHiddenInput = document.getElementById('SocialHiddenInput');
+
+        //Add existing links retrived from the database 
+        if(AddedSocialArray.length > 0){
+            SocialHiddenInput.value = Join(AddedSocialArray); 
+            AddedSocialArray.forEach(retrieved => {
+                SocialSelect = document.getElementById('SocialSelect');
+                const retrievedPlatform = retrieved.platform;
+
+                const NewSocialWrapper =document.createElement('div')
+                NewSocialWrapper.style.margin= "20px 0px"
+                AddedSocialMediaField.appendChild(NewSocialWrapper); 
+            
+                const InputWrapper = document.createElement('div'); 
+                NewSocialWrapper.appendChild(InputWrapper); 
+
+                InputWrapper.classList.add("SocialMediaLinkInput"); 
+
+                //this is for the title of the input 
+                const Label = document.createElement('div'); 
+                Label.innerHTML = `${retrievedPlatform}: `; 
+                Label.classList.add("SocialInputLabel")
+                InputWrapper.appendChild(Label)
+
+                const ConfirmedLinkText = document.createElement('div');
+                ConfirmedLinkText.classList.add('ConfirmedText'); 
+                ConfirmedLinkText.innerHTML = retrieved.link; 
+
+                //delete button 
+                const DeleteButton = document.createElement('img')
+	            DeleteButton.alt = "Delete";
+	            DeleteButton.classList.add("MiniDeleteButton")
+	            DeleteButton.src = "/assets/icon/cancel.png"
+                InputWrapper.appendChild(ConfirmedLinkText)
+                InputWrapper.appendChild(DeleteButton)
+
+                //Add socialmedia type and link to array 
+                const DeleteLink = () =>{
+                    AddedSocialMediaField.removeChild(NewSocialWrapper)
+                    var temp = AddedSocialArray.filter(val => val.link != retrieved.link)
+                    AddedSocialArray = temp; 
+                }
+                DeleteButton.addEventListener('mousedown', DeleteLink)
+            })
+        }
+
         const AddSocialInput = () =>{
             SocialSelect = document.getElementById('SocialSelect');
             //social media
