--- a/public/stylesheets/tailwind.css
+++ b/public/stylesheets/tailwind.css
@@ -166,13 +166,43 @@
     border-radius: 5px;
 }
 
-.DeleteMessageFadeIn {
+.EmailErrorMessage {
+    position: fixed;
+    top: 100px;
+    left: 0;
+    right: 0;
+    color: red;
+    padding: 1px 5px;
+    font-size: 25px;
+    font-family: inherit;
+    text-align: center;
+    margin: 10px auto;
+    transform: translateY(-40px);
     transition: opacity 1s linear, transform 1s linear;
-    opacity: 1.0;
-    transform: translateY(40px);
+    opacity: 0.0;
+    background-color: #ffffff;
+    width: fit-content;
+    max-width: 90%;
+    border-radius: 5px;
+    z-index: 30;
 }
 
+
 .DeleteMessageFadeOut {
-    opacity: 0.1;
+    opacity: 0.0;
     transform: translateY(-40px);
+}
+
+.DeleteMessageFadeIn {
+    opacity: 1.0;
+    transform: translateY(40px);
+    transition: opacity 1s linear, transform 1s linear;
+}
+
+
+@media screen and (max-width: 540px) {
+    .EmailErrorMessage {
+        max-width: 300px; 
+        top:150px;
+    }
 }
